tvix/nix-compat-derive-tests/tests/ui/serialize_enum_unsupported.rs
use nix_compat_derive::NixSerialize;

#[derive(NixSerialize)]
pub enum Test {
    Foo { version: u8 },
}

fn main() {}
